src/styles/style.css
@font-face {
  font-family: 'BlackOpsOne';
  src: url('../assets/BlackOpsOne-Regular.ttf') format('truetype');
}

body {
  height: 100vh;
  width: 100wh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 0;
  font-size: 1.25rem;
  background: rgb(56, 66, 74);
  color: white;
}

header {
  font-family: 'BlackOpsOne';
  font-size: 2rem;
  text-align: center;
  background: rgb(0, 150, 70);
  letter-spacing: .5ch;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer {
  background: rgb(0, 150, 70);
  font-size: 1.2rem;
  font-family: 'BlackOpsOne';
  padding: 1.2rem;
  text-align: center;
}

button {
  font-size: 1.5rem;
  margin: .5rem; 
  padding: .5rem 1.5rem;
  background: rgb(0, 150, 70);
  border: 1px solid rgb(0, 150, 70);
  color: white;
  border-radius: .25rem;
  min-width: 15rem;
}

button:hover {
  background: rgb(0, 190, 70);
  border: 1px solid rgb(0, 190, 70);
  border-radius: .25rem;
}

button:disabled {
  color: rgb(150, 150, 150);
  background: rgb(0, 100, 70);
  border: 1px solid rgb(0, 100, 70);
}

.menu {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: .5rem;
}

.menu-buttons {
  display: flex;
}

#input-name,
#player-name {
  text-align: center;
  font-size: 1.1rem;
}

#input-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

#player-name {
  width: 75%;
  padding: .25rem;
}

.log-area,
.log-window {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.log-area {
  width: 100%;
}

.log-window {
  box-sizing: border-box;
  border: .25rem solid rgb(16, 26, 34);
  border-bottom: none;
  background: rgb(26, 46, 54);
  width: 100%;
}

.log-window h2 {
  text-align: center;
  margin: 0;
}

.boards-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: .5rem;
  margin-bottom: 2.5rem;
}

#hints {
  margin-bottom: 1rem;
  font-weight: bold;
}

.boards {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3vw;
}

.board {
  height: 350px;
  width: 350px;
  background: rgb(0, 139, 179);
  display: flex;
  flex-wrap: wrap;
  border: 1.5rem ridge rgb(5, 37, 58);
}

.cell {
  box-sizing: border-box;
  border: 1px solid rgba(250, 250, 250, .2);
  height: 35px;
  width: 35px;
}

.h-horizontally-start {
  border-top-left-radius: 50%;
  border-bottom-left-radius: 50%;
}

.h-horizontally-end {
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
}

.h-vertically-start {
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
}

.h-vertically-end {
  border-bottom-left-radius: 50%;
  border-bottom-right-radius: 50%;
}

.horizontally-start {
  border-top-left-radius: 50%;
  border-bottom-left-radius: 50%;
}

.horizontally-end {
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
}

.vertically-start {
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
}

.vertically-end {
  border-bottom-left-radius: 50%;
  border-bottom-right-radius: 50%;
}

.water:hover {
  background: rgb(0, 190, 145);
}

.fog-of-war {
  background: rgb(100, 100, 100);
}

.fog-of-war:hover {
  background: rgb(120, 120, 120);
}

.future-ship,
.future-ship:hover {
  background: rgb(120, 200, 120);
}

.wrong-placement,
.wrong-placement:hover {
  background: rgb(250, 140, 140);
  transition: 0.20s;
}

.ship,
.ship:hover {
  background: rgb(200, 200, 80);
  transition: 0.20s;
}

.enemy-ship,
.enemy-ship:hover {
  background: rgb(250, 20, 20);
  transition: 0.20s;
}

.hit,
.hit:hover {
  background: rgb(250, 150, 50);
}

.miss,
.miss:hover {
  background: rgb(250, 150, 200);
}

.sunk,
.sunk:hover {
  background: rgb(250, 100, 0);
}

.around-sunk,
.around-sunk:hover {
  background: rgb(120, 80, 250);
}

#log {
  overflow-y: scroll;
  width: 70%;
  height: 12ch;
}

.log-player-missed {
  color: rgb(180, 180, 180);
}

.log-player-damaged {
  color: rgb(70, 200, 200);
}

.log-player-destroyed {
  color: rgb(70, 200, 70);
}

.log-computer-missed {
  color: rgb(180, 180, 50);
}

.log-computer-damaged {
  color: rgb(250, 100, 20);
}

.log-computer-destroyed {
  color: rgb(250, 20, 20);
}

.display-none {
  display: none;
}

.hidden {
  visibility: hidden;
}

